# inferencedb

./: Dockerfile  Makefile  README.md  pyproject.toml  skaffold.yaml
.github/workflows/: deploy.yaml
charts/inferencedb/: Chart.yaml  values.yaml
charts/inferencedb/crds/: inferencelogger.yaml
charts/inferencedb/templates/: _helpers.tpl  deployment.yaml  role.yaml  rolebinding.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
examples/kserve/kafka-broker/: broker.yaml  inferencelogger.yaml  inferenceservice.yaml
examples/kserve/multimodelserving/: broker.yaml  inferenceloggers.yaml  inferenceservice.yaml  trainedmodels.yaml
examples/multimodelserving/: inferenceloggers.yaml
examples/my-model/: README.md  inferencelogger.yaml  model-settings.json  my-model.lgb  requirements.txt  serve.py  settings.json  train.py
examples/simple-sklearn/: inferenceservice.yaml
src/inferencedb/: app.py  base_model.py  inference_logger.py  main.py  settings.py  utils.py
src/inferencedb/config/: component.py  config.py  factory.py
src/inferencedb/core/: base_model.py  inference.py  inference_logger.py  logging_utils.py
src/inferencedb/destinations/: confluent_s3_destination.py  destination.py  factory.py
src/inferencedb/event_processors/: event_processor.py  factory.py  inference.py  json_event_processor.py  kserve_event_processor.py
src/inferencedb/registry/: decorators.py  factory.py  registered_object.py  registry.py
src/inferencedb/schema_providers/: avro_schema_provider.py  factory.py  kserve_schema_provider.py  (+1 more)
tests/: test_kserve_utils.py
(+6 files in other folders)
